Clean up and Menu redesign